# unix-acl

./: .gitignore  CMakeLists.txt  Makefile  README.md  REAME.txt  ch.sh  dest  get  run
src/: .gitignore  acl.c  debug.c  get.c  getregex.c  main.c
src/include/: acl.h  debug.h  get.h  getregex.h
test/: aclaccesstest.sh  euidreadtest.sh  main.c  r  test
